Version 1.21.4
==================
- Fixed completer position when profiler is visible.
- Fixed incorrect error message when interrupting Studio without debugging.

Version 1.21.3
==================
- Added functionality to store and restore bookmarks.
- Fixed a crash when renaming a project, while a GDX viewer is open.
- Fixed that Studio window size isn't restored on macOS.
- Fixed missing DCO `$onEmbeddedCode` in completer.
- Improved edit function in GAMS User Config Editor, actions are now enabled/disabled based on single cell selection.

Version 1.21.2
==================
- Fixed crash on Windows 10 by allowing to disable the integrated Help View.
- New command line parameter `--integrated-help=on/off` (default: on) allows to enable/disable the integrated Help View.

Version 1.21.1
==================
- Added ctrl-click to the code editor to open 'yamlFile' or 'yamlFileEnd' defined in $onEmbeddedCode/embeddedCode in the Connect editor.
- Fixed a bug where the filter state of an unloaded symbol would not be considered in the GDX Viewer Export facility.
- Fixed a bug where the filter of an alias would not be considered in the GDX Viewer Export facility.
- Added missing menu icons on macOS.
- Renamed profiler columns to match the documentation.
- Improved the handling of run and compile menu with separated options submenu.
- Improved the display of `File Used` location in Reference File Viewer.

Version 1.21.0
==================
- Added profiler information to the editors when using the GAMS option `profile`.
- Added support for temporary session checkout of network licenses.
- Added an option to exclude hidden attributes when exporting data using the GDX Viewer. This is the new default.
- Added support for GAMS Engine job priority.
- Fixed restore of the last run mode in the toolbar on Studio start.
- Fixed crash when opening a file from the Welcome Page.
- Fixed missing syntax highlighting for end-of-line comment when led by spaces.