@@ -120,7 +120,9 @@ public:
     QStringList runFileParameterHistory(FileId fileId) const;
     void addRunParametersHistory(const QString &option);
     QStringList getRunParametersHistory() const;
-    QStringList analyzeParameters(const QString &gmsLocation, const QStringList &defaultParameters, const QList<option::OptionItem> &itemList, option::Option *opt, int &logOption);
+    QStringList analyzeParameters(const QString &gmsLocation, const QStringList &defaultParameters
+                                  , const QList<option::OptionItem> &itemList, option::Option *opt
+                                  , gamscom::ComFeatures comMode, int &logOption);
     void setLocation(const QString &newLocation) override;
     void setWorkDir(const QString &workingDir);
     QString workDir() const;
