@@ -23,7 +23,7 @@
 #include <QDir>
 #include <QMetaType>
 
-#ifdef _WIN32
+#ifdef _WIN64
 #include <Windows.h>
 #include <signal.h>
 #elif __APPLE__
@@ -66,7 +66,7 @@ void AbstractProcess::terminate()
     interruptIntern(true);
 }
 
-#ifdef _WIN32
+#ifdef _WIN64
 BOOL WINAPI CtrlHandler(DWORD fdwCtrlType)
 {
     if (fdwCtrlType == CTRL_C_EVENT)
@@ -75,11 +75,11 @@ BOOL WINAPI CtrlHandler(DWORD fdwCtrlType)
     // pass other signals to the next handler
     return false;
 }
-#endif // _WIN32
+#endif // _WIN64
 
 void AbstractProcess::interruptIntern(bool hardKill)
 {
-#ifdef _WIN32
+#ifdef _WIN64
     if (hardKill) {
         mProcess.kill();
     } else {
