@@ -2,6 +2,7 @@ Version 1.21.4
 ==================
 - Fixed completer position when profiler is visible.
 - Fixed incorrect error message when interrupting Studio without debugging.
+- Improved error message from GAMS when the command line parameters contains errors.
 
 Version 1.21.3
 ==================
